date, whereami, bsod
bsod (i hope you’ve played bioshock or know it at least…), whereami and
date

--- a/index.html
+++ b/index.html
@@ -108,5 +108,7 @@
    Ted Codd, Stevie Ray Vaughan, and Daniel Craig.
 </p>
 
+
+<img id ="bsod" src="dist/images/wouldYouKindly.png" height="900" width="1440">
 </body>
 </html>
