--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
              onclick="biOShock.Control.hostBtnReset_click(this);">
    </div>
 
-   <div id="divConsole" style="margin:4px; width:500px; height:500px; float:left;">
+   <div id="divConsole" style="margin:4px; width:518px; height:500px; float:left; overflow-y: auto">
       <canvas id="display"
               width="500px"
               height="500px"
@@ -109,6 +109,6 @@
 </p>
 
 
-<img id ="bsod" src="dist/images/wouldYouKindly.png" height="900" width="1440">
+<img id ="bsod" src="dist/images/wouldYouKindly.png" height="500" width="500">
 </body>
 </html>
