Status bar & clean
clean up on aisle 5…

made a function for the date and time for the shell command and the
status bar

I want the status for the status bar to display more than just one
word, or multiple words. But i don’t know how to stop that. Gotta use
something other than args maybe… hmm…

commented out the img i had for the BSOD. gotta figure out how to
display that on the canvas for a kernel shutdown

--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
              onclick="biOShock.Control.hostBtnReset_click(this);">
    </div>
 
-   <div id="divConsole" style="margin:4px; width:518px; height:500px; float:left; overflow-y: auto">
+    <div id="divStatusBar" style="margin: 4px; width: 500px; height: 15px; margin-top: 5px;">
+        <label>
+        Date and Time: <span id="spanDaT"></span>, Status: <span id="message"></span>
+        </label>
+    </div>
+
+   <div id="divConsole" style="margin:4px; width:519px; height:500px; float:left; overflow-y: auto">
       <canvas id="display"
               width="500px"
               height="500px"
@@ -109,6 +115,7 @@
 </p>
 
 
-<img id ="bsod" src="dist/images/wouldYouKindly.png" height="500" width="500">
+<!--<img id ="bsod" src="dist/images/wouldYouKindly.png" height="500" width="519">-->
+
 </body>
 </html>
