--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
          <br>
          <textarea name="taHostLog"
                    id  ="taHostLog"
-                   rows="26"
+                   rows="10"
                    cols="48"
          ></textarea>
       </label>
@@ -101,11 +101,35 @@
          <br>
          <textarea name="taProgramInput"
                    id  ="taProgramInput"
-                   rows="8"
+                   rows="6"
                    cols="48"
          ></textarea>
       </label>
    </div>
+
+   <div id="divMemory" style="margin-left: 520px;">
+      <label>
+         Memory
+         <br>
+         <textarea name="taMemoryOut"
+                   id  ="taMemoryOut"
+                   rows="7"
+                   cols="48"
+         ></textarea>
+       </label>
+   </div>
+
+    <div id="divCPU" style="margin-left: 520px;">
+        <label>
+            CPU Info
+            <br>
+            <textarea name="taCPU"
+                      id  ="taCPU"
+                      rows="7"
+                      cols="48"
+            ></textarea>
+        </label>
+    </div>
 
 </div>
 
