--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
    Copyright &copy; 2008 - 2014 No Rights Reserved.
    <br>
    Reproduction is prohibited without the express written consent of
-   Ted Codd, Stevie Ray Vaughan, and Daniel Craig.
+   Geddy Lee, Alex Lifeson, and Neil Peart.
 </p>
 
 
