--- a/index.html
+++ b/index.html
@@ -108,15 +108,7 @@
    </div>
 
    <div id="divMemory" style="margin-left: 520px;">
-      <label>
-         Memory
-         <br>
-         <textarea name="taMemoryOut"
-                   id  ="taMemoryOut"
-                   rows="7"
-                   cols="48"
-         ></textarea>
-       </label>
+       <table id="memTable"></table>
    </div>
 
     <div id="divCPU" style="margin-left: 520px;">
