Putting back to push to pages

--- a/index.html
+++ b/index.html
@@ -108,7 +108,15 @@
    </div>
 
    <div id="divMemory" style="margin-left: 520px;">
-       <table id="memTable"></table>
+       <label>
+           Memory
+           <br>
+           <textarea name="taMemoryOut"
+                     id  ="taMemoryOut"
+                     rows="7"
+                     cols="48"
+           ></textarea>
+       </label>
    </div>
 
     <div id="divCPU" style="margin-left: 520px;">
