I am not succeeding at printing memory to the screen whatsoever.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
          <textarea name="taHostLog"
                    id  ="taHostLog"
                    rows="9"
-                   cols="48"
+                   cols="67"
          ></textarea>
       </label>
    </div>
@@ -105,7 +105,7 @@
          <textarea name="taProgramInput"
                    id  ="taProgramInput"
                    rows="6"
-                   cols="48"
+                   cols="67"
          ></textarea>
       </label>
    </div>
@@ -115,11 +115,10 @@
            memory
            <br>
            <table id ="memTable">
-                <tr>
-                    <td>
+               <tbody>
 
-                    </td>
-                </tr>
+               </tbody>
+
            </table>
        </label>
    </div>
@@ -131,7 +130,7 @@
             <textarea name="taCPU"
                       id  ="taCPU"
                       rows="7"
-                      cols="48"
+                      cols="67"
             ></textarea>
         </label>
     </div>
