--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
    </div>
 
    <div id="divUserProgramInput" style="margin-left:520px;">
-      <label>
+      <label style="float: left;">
          user program input
          <br>
          <textarea name="taProgramInput"
@@ -108,31 +108,33 @@
                    cols="67"
          ></textarea>
       </label>
-   </div>
-
-   <div id="divMemory" style="margin-left: 520px;">
-       <label>
+      <label style="float: left;">
            memory
+          <br>
+          <textarea name="memTable"
+                    id  ="memTable"
+                    rows="11"
+                    cols="67"
+          ></textarea>
+      </label>
+      <label style="float: left;">
+           cpu
            <br>
-           <table id ="memTable">
-               <tbody>
-
-               </tbody>
-
-           </table>
+           <textarea name="taCPU"
+                     id  ="taCPU"
+                     rows="1"
+                     cols="67"
+           ></textarea>
+      </label>
+       <label style="float: left;">
+           pcb
+           <br>
+           <textarea name="taCPU"
+                     id  ="taCPU"
+                     rows="1"
+                     cols="67"
+                   ></textarea>
        </label>
-   </div>
-
-    <div id="divCPU" style="margin-left: 520px;">
-        <label>
-            cpu info
-            <br>
-            <textarea name="taCPU"
-                      id  ="taCPU"
-                      rows="7"
-                      cols="67"
-            ></textarea>
-        </label>
     </div>
 
 </div>
