Closer but not there
Run is never catching the op codes. So apparently there must be
something wrong with load. But when i load into memory, it outputs
everything correctly so I’m not sure what I’m doing wrong. Maybe
because I join the string and it’s not reading the op codes at 2
characters at a time but maybe as a huge string???

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
          <br>
          <textarea name="taProgramInput"
                    id  ="taProgramInput"
-                   rows="6"
+                   rows="9"
                    cols="67"
          ></textarea>
       </label>
@@ -117,20 +117,11 @@
                     cols="67"
           ></textarea>
       </label>
-      <label style="float: left;">
+       <label style="float: left;">
            cpu
            <br>
-           <textarea name="taCPU"
-                     id  ="taCPU"
-                     rows="1"
-                     cols="67"
-           ></textarea>
-      </label>
-       <label style="float: left;">
-           pcb
-           <br>
-           <textarea name="taCPU"
-                     id  ="taCPU"
+           <textarea name="pcb"
+                     id  ="pcb"
                      rows="1"
                      cols="67"
                    ></textarea>
