--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <br>
             <textarea name="taProgramInput"
                       id  ="taProgramInput"
-                      rows="9"
+                      rows="7"
                       cols="67"
                     ></textarea>
         </label>
@@ -141,16 +141,25 @@
             <br>
             <textarea name="memTable"
                       id  ="memTable"
-                      rows="11"
+                      rows="10"
                       cols="67"
                     ></textarea>
         </label>
         <label style="float: left;">
             cpu
             <br>
+            <textarea name="cpu"
+                      id  ="cpu"
+                      rows="1"
+                      cols="67"
+                    ></textarea>
+        </label>
+        <label style="float: left;">
+            pcb
+            <br>
             <textarea name="pcb"
                       id  ="pcb"
-                      rows="1"
+                      rows="2"
                       cols="67"
                     ></textarea>
         </label>
